--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "webpack-config",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "dev": "webpack-dev-server --progress --hot --open"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +30,7 @@
     "stylus-loader": "^3.0.1",
     "vue-loader": "^13.7.0",
     "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.5.6"
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.11.0"
   }
 }
