--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-loader": "^13.7.0",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.5.6",
+    "webpack-css-treeshaking-plugin": "^1.1.27",
     "webpack-dev-server": "^2.11.0"
   }
 }
