--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "style-loader": "^0.19.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "ts-loader": "^3.2.0",
+    "typescript": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "vue-loader": "^13.7.0",
     "vue-template-compiler": "^2.5.13",
