--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "build": "webpack --progress --colors",
-    "dev": "webpack-dev-server --progress --hot --open"
+    "build": "webpack --config webpack.prod.js --progress --colors",
+    "dev": "webpack-dev-server --progress --open --config webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
@@ -40,6 +40,7 @@
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.5.6",
     "webpack-css-treeshaking-plugin": "^1.1.27",
-    "webpack-dev-server": "^2.11.0"
+    "webpack-dev-server": "^2.11.0",
+    "webpack-merge": "^4.1.1"
   }
 }
