--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-loader": "^13.7.0",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.5.6",
+    "webpack-bundle-analyzer": "^2.9.2",
     "webpack-css-treeshaking-plugin": "^1.1.27",
     "webpack-dev-server": "^2.11.0",
     "webpack-merge": "^4.1.1"
